# accounts_service

./: .gitlab-ci.yml  accountsservice.conf  accountsservice.spec  configure.ac  generate-version.sh  meson.build  meson_options.txt
.gear/: rules
.gear/tags/: list
.gear/upstream/: remotes
data/: accounts-daemon.service.in  org.freedesktop.Accounts.User.xml
po/: cs.po  pt.po  ru.po  tr.po
src/: Makefile.am  crypt-util.c  crypt-util.h  daemon.c  daemon.h  extensions.c  main.c  meson.build  types.h  user-classify.c  user.c  user.h  util.c  util.h
src/libaccountsservice/: act-user-manager.c  act-user.c  act-user.h  meson.build
subprojects/: mocklibc.wrap
subprojects/packagefiles/: mocklibc-print-indent.diff
tests/: check-format.sh  meson.build  test-libaccountsservice.py
tests/data/etc/: shadow
tests/data/etc/tcb/benedict/: shadow
tests/data/etc/tcb/gdm/: shadow
tests/data/etc/tcb/rupert/: shadow
