option('systemdsystemunitdir', type: 'string', value: '', description: 'custom directory for systemd system units')
option('gdmconffile', type: 'string', value: '/etc/gdm/custom.conf', description: 'GDM configuration file')
option('lightdmconffile', type: 'string', value: '/etc/lightdm/lightdm.conf', description: 'LightDM configuration file')

option('admin_group', type: 'string', value: '', description: 'Set group for administrative accounts')
option('extra_admin_groups', type: 'array', value: [], description: 'Comma-separated list of extra groups that administrator users are part of')
option('default_user_groups', type: 'array', value: [], description: 'Comma-separated list of groups that all users are part of by default')
option('minimum_uid', type: 'integer', value: 1000, description: 'Set minimum uid for human users')

option('elogind', type: 'boolean', value: false, description: 'Use elogind')
option('libxcrypt', type: 'boolean', value: true, description: 'Use crypt_gensalt() from libxcrypt if available')

option('introspection', type: 'boolean', value: true, description: 'Enable introspection for this build')
option('vapi', type: 'boolean', value: true, description : 'Enable Vala bindings for this build')

option('docbook', type: 'boolean', value: false, description: 'build documentation (requires xmlto)')
option('gtk_doc', type: 'boolean', value: false, description: 'use gtk-doc to build documentation')
